fixed homepage title alignment

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -127,10 +127,6 @@ main {
 	border-top: solid 0.5px;
 }
 
-/* table, tr, th, td {
-	border: 0.5px solid black;
-} */
-
 table {
 	border-collapse: collapse;
 }
