--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -102,7 +102,6 @@ main {
     padding-left: 3%;
     margin-right: 3%;
     position: relative;
-    padding: 1.5em;
     padding-bottom: 0;
 }
 
